--- a/test/test.csproj
+++ b/test/test.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="2.3.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
